<resources>
    <string name="app_name">Cam Castle</string>

    <string name="main_activity_mute_enabled">Camera mute enabled.</string>
    <string name="main_activity_mute_disabled">Camera mute disabled.</string>
    <string name="main_activity_boot_enabled">Camera will be muted across reboots.</string>
    <string name="main_activity_boot_disabled">Camera will not be muted across reboots.</string>

    <string name="error_no_permissions">Permissions error - unable to change camera mute settings.</string>

    <string name="main_activity_write_settings_permission_title">Permission not granted</string>
    <string name="main_activity_write_settings_permission_message">
        In order for this app to work you must grant the write settings permission. Do you want to
        go to the settings page now?
    </string>


    <string name="main_activity_action_faq">FAQ</string>

    <string name="faq_activity_phone_mute_title">
        Q: Why does my camera still make the shutter sound even when the switch is on?
    </string>
    <string name="faq_activity_phone_mute_description">
        Your phone\'s ringer is probably still on. Switch it to vibrate or mute.
    </string>

    <string name="faq_activity_samsung_update_title">
        Q: I updated my phone and camsung stopped working.
    </string>
    <string name="faq_activity_samsung_update_description">
        Samsung probably patched out the mechanism that camsung uses to mute the camera.
    </string>

    <string name="faq_activity_android_warning_title">
        Q: Android warns me that this is an outdated app. What gives?
    </string>
    <string name="faq_activity_android_warning_description">
        Android only allows you to write to the system settings table if your app targets SDK 22 or
        below. Unfortunately, a side effect of setting the app\'s SDK to 22 is that Android will
        warn the user that the app may be incompatible. This is by design, and you can ignore the
        warning.
    </string>

    <string name="shortcut_camera_mute_short">Mute camera</string>
    <string name="shortcut_camera_mute_long">Enables camera mute</string>
    <string name="shortcut_camera_unmute_short">Unmute camera</string>
    <string name="shortcut_camera_unmute_long">Disables camera mute</string>

    <string name="settings_activity_title">Settings</string>

    <string name="settings_camera_header">Camera</string>

    <string name="settings_activity_camera_auto_launch_title">Automatically launch camera</string>
    <string name="settings_activity_camera_auto_launch_description">Open the camera once the mute status is toggled</string>

    <string name="auto_launching_camera">Launching camera&#8230;</string>
    <string name="auto_launch_camera_failed_no_camera">No camera app found. Unable to auto-launch camera.</string>

    <!-- Main Activity UI -->
    <string name="main_activity_camera_mute_title">Camera Mute</string>
    <string name="main_activity_camera_mute_description">Toggle camera shutter sound on/off</string>
    <string name="main_activity_boot_lock_title">Boot Lock</string>
    <string name="main_activity_boot_lock_description">Persist mute setting across reboots</string>
    <string name="main_activity_auto_launch_title">Auto Launch Camera</string>
    <string name="main_activity_auto_launch_description">Open camera after toggling mute</string>
    <string name="main_activity_faq_title">FAQ</string>
    <string name="main_activity_faq_description">Frequently asked questions</string>
    <string name="main_activity_welcome_title">Welcome to Cam Castle</string>
    <string name="main_activity_welcome_subtitle">Control your camera shutter sound</string>

    <!-- Quick Settings Tile -->
    <string name="tile_label">Camera Mute</string>
    <string name="tile_muted">Shutter\nSound Off</string>
    <string name="tile_unmuted">Shutter\nSound On</string>
    <string name="tile_no_permission">No Permission</string>

    <!-- Widget -->
    <string name="widget_description">Toggle camera shutter sound on/off</string>
</resources>